2026-02-17T01:09:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22082426318 # 880
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-17
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-26 2026-01-27 2026-01-28 2026-01-29 2026-01-30 2026-01-31 2026-02-01] / []

2026-02-16T01:10:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22046766015 # 879
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-15T01:13:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22027354360 # 878
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-15
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 71 115 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-25 2026-01-26 2026-01-27 2026-01-28] / []

2026-02-14T01:07:01Z: